# schedule-appointments

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
project/: settings.py  urls.py
project/management/commands/: create_test_user.py
schedules/: models.py  serializers.py  urls.py  views.py
schedules/migrations/: 0001_initial.py
schedules/tests/: factories.py  test_views.py
